# outflow

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  named_pipe.rs  udp.rs  unix_socket.rs
src/forward/: bidi.rs  mod.rs  unidi.rs
tests/: integration_tests.rs
